--- a/P010599.opf/layers/v001/Pagination.yml
+++ b/P010599.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: e6dea88dda81424d82079733c0533ff4
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   6b46ef4f1eb1482eba292b73758044e3:
